# asdfmidi

./: .gitignore  CMakeLists.txt  README.md
src/: app.cpp  app.hpp  keyboard_x11.cpp  keyboard_x11.hpp  main.cpp  mapping.cpp  mapping.hpp  midi_output.cpp  midi_output.hpp
